Fixes 10407: Add line-height to progress bar for proper text alignment within
BS3 commits: 143403f3fd42aeafa204602da22c4fd481c81435

--- a/less/progress-bars.less
+++ b/less/progress-bars.less
@@ -22,6 +22,7 @@
 
 // Bar of progress
 .progress-bar {
+  line-height: @line-height-computed;
   background-color: @progress-bar-bg;
   background-image: none;
   .box-shadow(none);
